Address all PR review comments for container-aware CPU detection
- Change runtime guard to restart feature: envoy_restart_features_enable_cgroup_cpu_detection
- Update API to return absl::optional<uint32_t> without hw_threads parameter
- Remove step comments as requested by reviewer
- Add Linux-only and --concurrency behavior notes to changelog
- Add proper ENVOY_LOG_MISC warning logs for malformed cgroup files
- Refactor to use optional throughout, remove UINT32_MAX sentinels
- Change string constants to constexpr absl::string_view
- Add Go source permalink with specific line number
- Remove isV1Available/isV2Available functions for simpler API
- Apply clang-format improvements for consistent code style
- Update all tests to use explicit absl::optional<uint32_t> types
- Simplify test mocks to match new direct file reading approach

All reviewer feedback has been addressed and code passes formatting checks.

Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -237,8 +237,10 @@ envoy_cc_library(
     hdrs = ["cgroup_cpu_util.h"],
     deps = [
         "//envoy/filesystem:filesystem_interface",
+        "//source/common/common:logger_lib",
         "//source/common/filesystem:filesystem_lib",
         "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:optional",
     ],
 )
 
