--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -15,6 +15,11 @@ behavior_changes:
   change: |
     Reverted `#39740 <https://github.com/envoyproxy/envoy/pull/39740>`_ to re-enable ``fail_open`` +
     ``FULL_DUPLEX_STREAMED`` configuration combination.
+- area: load balancing
+  change: |
+    Moved locality WRR structures out of HostSetImpl and into a separate class. Locality WRR schedulers are now by default owned
+    and constructed by the underlying Zone Aware LB, instead of owned and constructed by the Host Set. There should be no visible
+    behavior change for existing users of Zone Aware LBs.
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
