--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -2889,3 +2889,17 @@ envoy_cc_test(
         "//test/test_common:utility_lib",
     ],
 )
+
+envoy_cc_test(
+    name = "xds_grpc_client_cache_test",
+    srcs = ["xds_grpc_client_cache_test.cc"],
+    deps = [
+        ":http_integration_lib",
+        "//test/mocks/server:options_mocks",
+        "//test/test_common:network_utility_lib",
+        "//test/test_common:test_runtime_lib",
+        "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
+        "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+    ],
+)
