--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -513,6 +513,7 @@ envoy_cc_library(
         "//envoy/init:manager_interface",
         "//envoy/server:options_interface",
         "//source/common/common:assert_lib",
+        "//source/common/common:logger_lib",
         "@envoy_api//envoy/admin/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
     ],
