--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -512,8 +512,11 @@ envoy_cc_library(
         "//envoy/common:exception_lib",
         "//envoy/init:manager_interface",
         "//envoy/server:options_interface",
+        "//envoy/server:factory_context_interface",
+        "//envoy/access_log:access_log_interface",
         "//source/common/common:assert_lib",
         "//source/common/common:logger_lib",
+        "//source/common/access_log:access_log_lib",
         "@envoy_api//envoy/admin/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
     ],
