--- a/test/extensions/access_loggers/filters/cel/BUILD
+++ b/test/extensions/access_loggers/filters/cel/BUILD
@@ -23,3 +23,18 @@ envoy_extension_cc_test(
         "@envoy_api//envoy/extensions/access_loggers/filters/cel/v3:pkg_cc_proto",
     ],
 )
+
+envoy_extension_cc_test(
+    name = "cel_test",
+    srcs = ["cel_test.cc"],
+    extension_names = ["envoy.access_loggers.extension_filters.cel"],
+    deps = [
+        "//source/extensions/access_loggers/filters/cel:cel_lib",
+        "//source/extensions/filters/common/expr:evaluator_lib",
+        "//test/mocks/local_info:local_info_mocks",
+        "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stream_info:stream_info_mocks",
+        "//test/test_common:utility_lib",
+        "@com_google_cel_cpp//parser",
+    ],
+)
