--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -16,6 +16,20 @@ behavior_changes:
     <envoy_v3_api_field_extensions.request_id.uuid.v3.UuidRequestIdConfig.pack_trace_reason>` is set
     to ``true`` (it is ``true`` by default), a request marked as traced cannot be unmarked as traced
     after the tracing refresh.
+- area: http2
+  change: |
+    The default value for the :ref:`maximum number of concurrent streams in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_concurrent_streams>`
+    has been changed from 2147483647 to 1024.
+    The default value for the :ref:`initial stream window size in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_stream_window_size>`
+    has been changed from 256MiB to 16MiB.
+    The default value for the :ref:`initial connection window size in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_connection_window_size>`
+    has been changed from 256MiB to 24MiB.
+    This change could be reverted temporarily by
+    setting the runtime guard ``envoy.reloadable_features.safe_http2_options``
+    to ``false``.
 - area: ext_proc
   change: |
     Reverted `#39740 <https://github.com/envoyproxy/envoy/pull/39740>`_ to re-enable ``fail_open`` +
