--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -90,6 +90,11 @@ minor_behavior_changes:
     Honor the default DNS resolver configuration in the bootstrap config
     :ref:`typed_dns_resolver_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.typed_dns_resolver_config>` if the
     :ref:`client_config <envoy_v3_api_field_extensions.filters.udp.dns_filter.v3.DnsFilterConfig.client_config>` is empty.
+- area: grpc_json_transcoder
+  change: |
+    Cap the frame size for streamed grpc at 1MB. Without this change there was a small chance
+    that if a request streamed in sufficiently faster than it was processed, a frame larger than
+    4MB could be encoded, which most upstream grpc services would, by default, treat as an error.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
