fix build rules
Signed-off-by: Mark D. Roth <roth@google.com>

--- a/api/envoy/extensions/grpc_service/channel_credentials/xds/v3/BUILD
+++ b/api/envoy/extensions/grpc_service/channel_credentials/xds/v3/BUILD
@@ -4,8 +4,4 @@ load("@envoy_api//bazel:api_build_system.bzl", "api_proto_package")
 
 licenses(["notice"])  # Apache 2
 
-api_proto_package(
-    deps = [
-        "//envoy/core/v3:pkg",
-    ],
-)
+api_proto_package()
