--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -415,6 +415,12 @@ new_features:
     :ref:`stream_flush_timeout
     <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_flush_timeout>`
     to allow for configuring a stream flush timeout independently from the stream idle timeout.
+- area: http
+  change: |
+    Added support for header removal based on header key matching. The new
+    :ref:`remove_on_match <envoy_v3_api_field_config.common.mutation_rules.v3.HeaderMutation.remove_on_match>`
+    allows removing headers that match a specified key pattern. This enables more flexible and
+    dynamic header manipulation based on header names.
 - area: geoip
   change: |
     Added a new metric ``db_build_epoch`` to track the build timestamp of the MaxMind geolocation database files.
