--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -509,14 +509,16 @@ envoy_cc_library(
     srcs = ["utils.cc"],
     hdrs = ["utils.h"],
     deps = [
+        ":generic_factory_context_lib",
+        "//envoy/access_log:access_log_interface",
         "//envoy/common:exception_lib",
         "//envoy/init:manager_interface",
-        "//envoy/server:options_interface",
         "//envoy/server:factory_context_interface",
-        "//envoy/access_log:access_log_interface",
+        "//envoy/server:options_interface",
+        "//source/common/access_log:access_log_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:logger_lib",
-        "//source/common/access_log:access_log_lib",
+        "//source/common/stream_info:stream_info_lib",
         "@envoy_api//envoy/admin/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
     ],
