--- a/test/coverage.yaml
+++ b/test/coverage.yaml
@@ -59,6 +59,7 @@ directories:
   source/extensions/internal_redirect/safe_cross_scheme: 81.3
   source/extensions/internal_redirect/allow_listed_routes: 85.7
   source/extensions/internal_redirect/previous_routes: 89.3
+  source/extensions/load_balancing_policies/common: 96.3
   source/extensions/load_balancing_policies/maglev: 94.9
   source/extensions/load_balancing_policies/round_robin: 96.4
   source/extensions/load_balancing_policies/ring_hash: 96.9
