add integration test
Signed-off-by: Xuyang Tao <taoxuy@google.com>

--- a/source/extensions/access_loggers/filters/local_ratelimit/BUILD
+++ b/source/extensions/access_loggers/filters/local_ratelimit/BUILD
@@ -26,6 +26,7 @@ envoy_cc_extension(
     hdrs = ["config.h"],
     extra_visibility = [
         "//test/common/access_log:__subpackages__",
+        "//test/integration:__subpackages__",
     ],
     deps = [
         ":filter_lib",
