--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -2756,9 +2756,12 @@ envoy_cc_test(
     ],
     deps = [
         ":http_integration_lib",
+        "//source/extensions/access_loggers/filters/local_ratelimit:config",
         "//source/extensions/formatter/cel:config",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/accesslog/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/access_loggers/file/v3:pkg_cc_proto",
+        "@envoy_api//envoy/type/v3:pkg_cc_proto",
     ],
 )
 
