--- a/source/common/upstream/BUILD
+++ b/source/common/upstream/BUILD
@@ -416,14 +416,41 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "transport_socket_input_lib",
+    srcs = ["transport_socket_input.cc"],
+    hdrs = ["transport_socket_input.h"],
+    deps = [
+        "//envoy/matcher:matcher_interface",
+        "//envoy/network:address_interface",
+        "//envoy/server:factory_context_interface",
+        "//source/common/config:metadata_lib",
+        "//source/common/config:well_known_names",
+        "//source/common/json:json_utility_lib",
+        "//source/common/network:utility_lib",
+        "//source/common/protobuf",
+        "//source/common/protobuf:utility_lib",
+        "//source/common/stream_info:filter_state_lib",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/matching/common_inputs/network/v3:pkg_cc_proto",
+        "@envoy_api//envoy/type/metadata/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_cc_library(
     name = "transport_socket_match_lib",
     srcs = ["transport_socket_match_impl.cc"],
     deps = [
+        ":transport_socket_input_lib",
         ":upstream_includes",
+        "//envoy/matcher:matcher_interface",
+        "//envoy/server:factory_context_interface",
         "//source/common/common:utility_lib",
         "//source/common/config:utility_lib",
+        "//source/common/matcher:field_matcher_lib",
+        "//source/common/matcher:matcher_lib",
         "//source/common/protobuf",
         "//source/common/protobuf:utility_lib",
+        "@com_github_cncf_xds//xds/type/matcher/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
     ],
@@ -432,6 +459,7 @@ envoy_cc_library(
 envoy_cc_library(
     name = "upstream_includes",
     hdrs = [
+        "transport_socket_input.h",
         "transport_socket_match_impl.h",
         "upstream_impl.h",
     ],
@@ -478,6 +506,7 @@ envoy_cc_library(
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/endpoint/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/matching/common_inputs/network/v3:pkg_cc_proto",
     ],
 )
 
