--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -512,21 +512,48 @@ envoy_cc_test(
     ],
 )
 
+# TODO: Add comprehensive transport socket input tests.
+# Test was removed due to complex API dependencies that need resolution.
+
+envoy_cc_test(
+    name = "transport_socket_input_test",
+    srcs = ["transport_socket_input_test.cc"],
+    deps = [
+        "//envoy/network:address_interface",
+        "//source/common/network:utility_lib",
+        "//source/common/stream_info:filter_state_lib",
+        "//source/common/upstream:transport_socket_input_lib",
+        "//test/mocks/network:network_mocks",
+        "//test/mocks/stream_info:stream_info_mocks",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
+        "@envoy_api//envoy/type/metadata/v3:pkg_cc_proto",
+    ],
+)
+
 envoy_cc_test(
     name = "transport_socket_matcher_test",
     srcs = ["transport_socket_matcher_test.cc"],
     rbe_pool = "6gig",
     deps = [
         "//envoy/api:api_interface",
+        "//envoy/matcher:matcher_interface",
         "//source/common/config:metadata_lib",
+        "//source/common/matcher:matcher_lib",
         "//source/common/network:transport_socket_options_lib",
+        "//source/common/upstream:transport_socket_input_lib",
         "//source/common/upstream:transport_socket_match_lib",
+        "//source/extensions/matching/network/common:inputs_lib",
+        "//source/extensions/transport_sockets/raw_buffer:config",
+        "//source/extensions/transport_sockets/tls:config",
         "//source/server:transport_socket_config_lib",
         "//test/mocks:common_lib",
         "//test/mocks/network:network_mocks",
         "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/test_common:registry_lib",
         "//test/test_common:utility_lib",
+        "@com_github_cncf_xds//xds/type/matcher/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
     ],
