apply review recommandations
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,12 @@
 !\.zuul.yaml
 
 /bazel-*
+/mobile/bazel-*
 BROWSE
 /build
 /build_*
 *.bzlc
+/ci/bazel-*
 compile_commands.json
 cscope.*
 /docs/landing_source/.bundle
