--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -98,8 +98,8 @@ bug_fixes:
     Fixed a bug where when a downstream TCP connection is created and the upstream connection is not fully established, no idle timeout
     is set on the downstream connection, which may lead to a connection leak if the client does not close the connection.
     The fix is to set an idle timeout on the downstream connection immediately after creation.
-    This fix can be reverted by setting the runtime guard ``envoy.reloadable_features.tcp_proxy_set_idle_timer_immediately_on_new_connection``
-    to ``false``.
+    This fix can be reverted by setting the runtime guard
+    ``envoy.reloadable_features.tcp_proxy_set_idle_timer_immediately_on_new_connection`` to ``false``.
 - area: udp_proxy
   change: |
     Fixed a crash in the UDP proxy that occurred during ``ENVOY_SIGTERM`` when active tunneling sessions were present.
