--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -375,7 +375,7 @@ new_features:
   change: |
     Introduced a new
     :ref:`ProcessingRequestModifier <envoy_v3_api_field_extensions.filters.http.ext_proc.v3.ExternalProcessor.processing_request_modifier>`
-    config and corresponding interface to enable modifying the ProcessingRequest before it is sent on the wire. Sample use cases include
+    config and corresponding interface to enable modifying the ``ProcessingRequest`` before it is sent on the wire. Sample use cases include
     modifying attribute and metadata keys to abstract away filter details. If the config is not set, then there is no behavior change.
     Supports per-route overrides.
 - area: tracing
