--- a/test/extensions/filters/http/compressor/BUILD
+++ b/test/extensions/filters/http/compressor/BUILD
@@ -20,6 +20,7 @@ envoy_extension_cc_test(
     name = "compressor_filter_test",
     srcs = [
         "compressor_filter_test.cc",
+        "compressor_filter_testing_peer.h",
     ],
     extension_names = ["envoy.filters.http.compressor"],
     rbe_pool = "6gig",
@@ -28,7 +29,9 @@ envoy_extension_cc_test(
         "//source/extensions/filters/http/compressor:compressor_filter_lib",
         "//test/mocks/compression/compressor:compressor_mocks",
         "//test/mocks/http:http_mocks",
+        "//test/mocks/protobuf:protobuf_mocks",
         "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/server:factory_context_mocks",
         "//test/test_common:utility_lib",
     ],
 )
@@ -48,6 +51,7 @@ envoy_extension_cc_test(
         "//test/integration:http_integration_lib",
         "//test/test_common:simulated_time_system_lib",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/extensions/compression/gzip/compressor/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/compressor/v3:pkg_cc_proto",
     ],
 )
@@ -66,9 +70,11 @@ envoy_extension_cc_test(
     rbe_pool = "6gig",
     deps = [
         ":mock_config_cc_proto",
+        "//source/extensions/compression/common/compressor:compressor_factory_base_lib",
         "//source/extensions/filters/http/compressor:config",
         "//test/mocks/runtime:runtime_mocks",
         "//test/mocks/server:factory_context_mocks",
+        "//test/test_common:registry_lib",
         "//test/test_common:utility_lib",
     ],
 )
