addressed comments from @cpakulski
Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -430,7 +430,7 @@ extensions/upstreams/tcp @ggreenway @mattklein123
 /contrib/kafka/ @mattklein123 @adamkotwasinski
 /contrib/rocketmq_proxy/ @aaron-ai @lizhanhui
 /contrib/mysql_proxy/ @rshriram @venilnoronha
-/contrib/postgres_inspector/ @agrawroh @cpakulski
+/contrib/postgres_inspector/ @agrawroh @cpakulski @jarupatj
 /contrib/postgres_proxy/ @fabriziomello @cpakulski
 /contrib/sxg/ @cpapazian @UNOWNED
 /contrib/sip_proxy/ @durd07 @nearbyfly @dorisd0102
