--- a/contrib/postgres_inspector/filters/listener/test/BUILD
+++ b/contrib/postgres_inspector/filters/listener/test/BUILD
@@ -25,22 +25,22 @@ envoy_cc_test(
     ],
 )
 
-# Integration test disabled due to contrib test environment limitations
-# with core Envoy network filters. Unit tests provide comprehensive coverage.
-# envoy_cc_test(
-#     name = "postgres_inspector_integration_test",
-#     srcs = ["postgres_inspector_integration_test.cc"],
-#     repository = "@envoy",
-#     deps = [
-#         ":postgres_test_utils_lib",
-#         "//contrib/postgres_inspector/filters/listener/source:config",
-#         "//source/common/network:utility_lib",
-#         "//test/integration:integration_lib",
-#         "//test/integration:utility_lib",
-#         "//test/test_common:utility_lib",
-#         "@envoy_api//envoy/extensions/filters/network/tcp_proxy/v3:pkg_cc_proto",
-#     ],
-# )
+envoy_cc_test(
+    name = "postgres_inspector_integration_test",
+    srcs = ["postgres_inspector_integration_test.cc"],
+    repository = "@envoy",
+    deps = [
+        ":postgres_test_utils_lib",
+        "//contrib/postgres_inspector/filters/listener/source:config",
+        "//source/common/network:utility_lib",
+        "//source/extensions/filters/listener/tls_inspector:config",
+        "//source/extensions/filters/network/tcp_proxy:config",
+        "//test/integration:integration_lib",
+        "//test/integration:utility_lib",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/extensions/filters/network/tcp_proxy/v3:pkg_cc_proto",
+    ],
+)
 
 envoy_cc_test(
     name = "postgres_message_parser_test",
@@ -74,6 +74,7 @@ cc_library(
     srcs = [],
     hdrs = ["postgres_test_utils.h"],
     deps = [
+        "//contrib/postgres/protocol:postgres_protocol_lib",
         "//source/common/buffer:buffer_lib",
     ],
 )
