matcher: Add NetworkNamespaceInput matcher for namespace-based filter chain selection (#41145)
## Description

We have a use-case where we want to ingress traffic on the same
`IP:Port` from different network namespaces and map them to different
filter chains based on which network namespace the traffic came from.
Today, there is no `filter_chain_match` available based on the network
namespace.

In this PR, we are adding a new `NetworkNamespaceInput` which could be
used in the `filter_chain_match` to match on the incoming network
namespace to pick a unique filter chain.

### Testing

```
$ sudo ip netns add development
$ sudo ip -n development link set lo up
$ sudo ip netns exec development curl http://localhost:8080/foo
```

<img width="1723" height="282" alt="Screenshot 2025-09-19 at 20 43 09"
src="https://github.com/user-attachments/assets/31336cde-4bc3-48fa-b95e-0038f6217243"
/>

**Config:**
```
static_resources:
  listeners:
  - name: multi_namespace_listener
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 8080
        network_namespace_filepath: "/var/run/netns/development"
    additional_addresses:
    - address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 8080
          network_namespace_filepath: "/var/run/netns/staging"
    - address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 8080
          network_namespace_filepath: "/var/run/netns/production"

    # Use filter_chain_matcher to route based on network namespace.
    filter_chain_matcher:
      matcher_tree:
        input:
          name: envoy.matching.inputs.network_namespace
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.NetworkNamespaceInput
        exact_match_map:
          map:
            # Route traffic from namespace 'production' to production filter chain.
       

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -408,6 +408,15 @@ new_features:
 - area: tls_inspector
   change: |
     Added dynamic metadata when failing to parse the ``ClientHello``.
+- area: matching
+  change: |
+    Added :ref:`NetworkNamespaceInput
+    <envoy_v3_api_msg_extensions.matching.common_inputs.network.v3.NetworkNamespaceInput>` to the
+    matcher framework. This input returns the listener address's ``network_namespace_filepath``
+    for use with :ref:`filter_chain_matcher
+    <envoy_v3_api_field_config.listener.v3.Listener.filter_chain_matcher>`, enabling filter chain
+    selection based on the Linux network namespace of the bound socket. On non-Linux platforms,
+    the input returns an empty value and connections use the default filter chain.
 - area: lua
   change: |
     Added ``route()`` to the Stream handle API, allowing Lua scripts to retrieve route information. So far, the only method
