Undo accidental change during rebase
Signed-off-by: lucaschimweg <schimweg@uber.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -457,7 +457,7 @@ new_features:
   change: |
     Added a new metric ``db_build_epoch`` to track the build timestamp of the MaxMind geolocation database files.
     This can be used to monitor the freshness of the databases currently in use by the filter.
-    See `MaxMind DB build_epoch <https://maxmind.github.io/MaxMind-DB/#build_epoch>`_ for more details.
+    See `MaxMind-DB build_epoch <https://maxmind.github.io/MaxMind-DB/#build_epoch>`_ for more details.
 - area: overload management
   change: |
     Added a new scaled timer type ``HttpDownstreamStreamFlush`` to the overload manager. This allows
