rbac: enable use of NetworkNamespaceInput in network RBAC filter (#41199)
## Description

This PR enables the use of `NetworkNamespaceInput` in the RBAC filter to
be able to match on the incoming network namespace and do RBAC
enforcement based on that.

---

**Commit Message:** rbac: enable use of NetworkNamespaceInput in network
RBAC filter
**Additional Description:** Enable `NetworkNamespaceInput` to be used in
the Network RBAC filter.
**Risk Level:** Low
**Testing:** Added Unit Tests
**Docs Changes:** Added
**Release Notes:** Added

Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -434,6 +434,12 @@ new_features:
     <envoy_v3_api_field_config.listener.v3.Listener.filter_chain_matcher>`, enabling filter chain
     selection based on the Linux network namespace of the bound socket. On non-Linux platforms,
     the input returns an empty value and connections use the default filter chain.
+- area: rbac
+  change: |
+    Enabled use of :ref:`NetworkNamespaceInput
+    <envoy_v3_api_msg_extensions.matching.common_inputs.network.v3.NetworkNamespaceInput>` in the
+    network RBAC filter's matcher. This allows RBAC policies to evaluate the Linux network namespace
+    of the listening socket via the generic matcher API.
 - area: lua
   change: |
     Added ``route()`` to the Stream handle API, allowing Lua scripts to retrieve route information. So far, the only method
