--- a/tools/code_format/config.yaml
+++ b/tools/code_format/config.yaml
@@ -428,6 +428,7 @@ unsorted_flags:
 # https://github.com/envoyproxy/envoy/issues/9953
 # PLEASE DO NOT ADD FILES TO THIS LIST WITHOUT SENIOR MAINTAINER APPROVAL
 visibility_excludes:
+- source/extensions/access_loggers/filters/process_ratelimit/
 - source/extensions/clusters/eds/
 - source/extensions/clusters/strict_dns/
 - source/extensions/clusters/static/
