--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -479,7 +479,6 @@ new_features:
     :ref:`remove_on_match <envoy_v3_api_field_config.common.mutation_rules.v3.HeaderMutation.remove_on_match>`
     allows removing headers that match a specified key pattern. This enables more flexible and
     dynamic header manipulation based on header names.
-    Support rate limiting on access log emission.
 - area: geoip
   change: |
     Added a new metric ``db_build_epoch`` to track the build timestamp of the MaxMind geolocation database files.
@@ -506,6 +505,6 @@ new_features:
     This can be used to avoid thundering herd problems with many clients being disconnected and possibly reconnecting at the same time.
 - area: access_log
   change: |
-    Support rate limiting on access log.
+    Support process-level rate limiting on access log.
 
 deprecated:
