--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -71,6 +71,10 @@ minor_behavior_changes:
     Honor the default DNS resolver configuration in the bootstrap config
     :ref:`typed_dns_resolver_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.typed_dns_resolver_config>` if the
     :ref:`client_config <envoy_v3_api_field_extensions.filters.udp.dns_filter.v3.DnsFilterConfig.client_config>` is empty.
+- area: ext_authz
+  change: |
+    Check the request header count after applying mutations is <= the configured limit and reject
+    the response if not.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
