--- a/test/extensions/filters/http/ext_proc/BUILD
+++ b/test/extensions/filters/http/ext_proc/BUILD
@@ -43,6 +43,7 @@ envoy_extension_cc_test(
     tags = ["skip_on_windows"],
     deps = [
         ":mock_server_lib",
+        ":test_processing_request_modifier_lib",
         ":utils_lib",
         "//envoy/http:filter_interface",
         "//envoy/network:filter_interface",
@@ -55,7 +56,6 @@ envoy_extension_cc_test(
         "//source/extensions/filters/http/ext_proc",
         "//source/extensions/filters/http/ext_proc:on_processing_response_interface",
         "//source/extensions/filters/http/ext_proc:processing_request_modifier_interface",
-        "//source/extensions/http/ext_proc/processing_request_modifiers/mapped_attribute_builder:mapped_attribute_builder_lib",
         "//source/extensions/http/ext_proc/response_processors/save_processing_response:save_processing_response_lib",
         "//test/common/http:common_lib",
         "//test/common/http:conn_manager_impl_test_base_lib",
@@ -69,9 +69,36 @@ envoy_extension_cc_test(
         "//test/test_common:registry_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
-        "@envoy_api//envoy/extensions/http/ext_proc/processing_request_modifiers/mapped_attribute_builder/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/http/ext_proc/response_processors/save_processing_response/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/ext_proc/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_extension_cc_test(
+    name = "mapped_attribute_builder_test",
+    size = "small",
+    srcs = ["mapped_attribute_builder_test.cc"],
+    extension_names = ["envoy.filters.http.ext_proc"],
+    rbe_pool = "6gig",
+    tags = ["skip_on_windows"],
+    deps = [
+        "//source/common/network:address_lib",
+        "//source/common/router:string_accessor_lib",
+        "//source/extensions/http/ext_proc/processing_request_modifiers/mapped_attribute_builder:mapped_attribute_builder_lib",
+        "//test/mocks/server:server_factory_context_mocks",
+        "//test/test_common:utility_lib",
+        "@envoy_api//envoy/extensions/http/ext_proc/processing_request_modifiers/mapped_attribute_builder/v3:pkg_cc_proto",
+    ],
+)
+
+envoy_extension_cc_test_library(
+    name = "test_processing_request_modifier_lib",
+    srcs = ["test_processing_request_modifier.cc"],
+    hdrs = ["test_processing_request_modifier.h"],
+    extension_names = ["envoy.filters.http.ext_proc"],
+    tags = ["skip_on_windows"],
+    deps = [
+        "//source/extensions/filters/http/ext_proc:processing_request_modifier_interface",
     ],
 )
 
