dependency/tools: Add parser for CPE info from bazel deps (#41225)
This filters out bazel dep repos that have no cpe data to match and
prunes the data

In a follow up ill add some tools/ci to fetch CVE data and some further
functionality to do the matching/parse results

Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/tools/dependency/BUILD
+++ b/tools/dependency/BUILD
@@ -36,6 +36,24 @@ envoy_genjson(
     """,
 )
 
+envoy_genjson(
+    name = "cpe-dependencies",
+    srcs = [":filtered-dependencies"],
+    args = [
+        "-s",
+        "-c",
+        "-L",
+        "tools/dependency",
+    ],
+    data = [":cve_utils.jq"],
+    filter = """
+    import "cve_utils" as Utils;
+    .[0] as $deps
+    | Utils::parse_deps($deps)
+    """,
+    visibility = ["//visibility:public"],
+)
+
 envoy_entry_point(
     name = "check",
     args = [
