--- a/configs/reverse_connection/responder-envoy.yaml
+++ b/configs/reverse_connection/responder-envoy.yaml
@@ -1,10 +1,15 @@
 ---
 node:
+<<<<<<<< HEAD:configs/reverse_connection/upstream-envoy.yaml
   id: upstream-envoy-node
   cluster: upstream-envoy-cluster
+========
+  id: upstream-node
+  cluster: upstream-cluster
+>>>>>>>> 5e41f1f358 (changes to reverse connection docs):configs/reverse_connection/responder-envoy.yaml
 static_resources:
   listeners:
-    # Services reverse conn APIs
+    # Accepts reverse tunnel requests
     - name: rev_conn_api_listener
       address:
         socket_address:
@@ -12,30 +17,10 @@ static_resources:
           port_value: 9000
       filter_chains:
         - filters:
-            - name: envoy.http_connection_manager
+            - name: envoy.filters.network.reverse_tunnel
               typed_config:
-                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-                stat_prefix: rev_conn_api
-                # Any dummy route config works
-                route_config:
-                  virtual_hosts:
-                  - name: rev_conn_api_route
-                    domains:
-                      - "*"
-                    routes:
-                      - match:
-                          prefix: '/on_prem_service'
-                        route:
-                          cluster: reverse_connection_cluster
-                http_filters:
-                  # Filter that services reverse conn APIs
-                  - name: envoy.filters.http.reverse_conn
-                    typed_config:
-                      "@type": type.googleapis.com/envoy.extensions.filters.http.reverse_conn.v3.ReverseConn
-                      ping_interval: 2
-                  - name: envoy.filters.http.router
-                    typed_config:
-                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+                "@type": type.googleapis.com/envoy.extensions.filters.network.reverse_tunnel.v3.ReverseTunnel
+                ping_interval: 2s
 
     # Listener that will route the downstream request to the reverse connection cluster
     - name: egress_listener
@@ -56,7 +41,7 @@ static_resources:
                         - "*"
                       routes:
                         - match:
-                            prefix: "/on_prem_service"
+                            prefix: "/downstream_service"
                           route:
                             cluster: reverse_connection_cluster
                 http_filters:
@@ -75,8 +60,8 @@ static_resources:
           # The following headers are expected in downstream requests
           # to be sent over reverse connections
           http_header_names:
-            - x-remote-node-id # Should be set to the node ID of the downstream envoy node, ie., on-prem-node
-            - x-dst-cluster-uuid # Should be set to the cluster ID of the downstream envoy node, ie., on-prem
+            - x-remote-node-id # Should be set to the node ID of the downstream envoy node, ie., downstream-node
+            - x-dst-cluster-uuid # Should be set to the cluster ID of the downstream envoy node, ie., downstream
       typed_extension_protocol_options:
         envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
           "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
